--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Uncle Norris Jokes",
+    "name": "Just Joking",
     "version": "0.0.1",
     "manifest_version": 2,
     "browser_action": {
